# bevy_sdf_example

./: Cargo.toml  README.md
assets/: sdf.frag  sdf.vert
src/: main.rs
