[package]
name = "sdf_example"
version = "0.1.0"
authors = ["Alec Deason <alec@tinycountry.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rstar = "0.8.2"

[dependencies.bevy]
git = "https://github.com/alec-deason/bevy.git"
branch = "label_render_systems"
version = "0.4"
